@@ -32,6 +32,6 @@ public class PodTemplateFactoryDiscovererImpl
       throw new IllegalArgumentException(
           "It should be a single pod template factory per StackGres Version");
     }
-    return podTemplateFactories.get(0);
+    return podTemplateFactories.getFirst();
   }
 }
